hphp/hack/test/sound_dynamic/typing/vector_index.bad.php.exp
File "vector_index.bad.php", line 7, characters 3-15:
Invalid assignment (Typing[4110])
  File "vector_index.bad.php", line 5, characters 10-12:
  Expected `int`
  File "vector_index.bad.php", line 7, characters 13-15:
  But got `string`
File "vector_index.bad.php", line 8, characters 3-14:
Invalid assignment (Typing[4110])
  File "vector_index.bad.php", line 5, characters 10-12:
  Expected `int`
  File "vector_index.bad.php", line 4, characters 3-9:
  But got `dynamic`
File "vector_index.bad.php", line 15, characters 5-23:
Invalid assignment (Typing[4110])
  File "vector_index.bad.php", line 12, characters 46-48:
  Expected `int`
  File "vector_index.bad.php", line 15, characters 21-23:
  But got `string`
File "vector_index.bad.php", line 16, characters 5-22:
Invalid assignment (Typing[4110])
  File "vector_index.bad.php", line 12, characters 46-48:
  Expected `int`
  File "vector_index.bad.php", line 14, characters 21-27:
  But got `dynamic`
